basic wireframe of desktop made

--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -1,7 +1,11 @@
 @import "variables";
 
 
-
-
 @import "modules/hero";
+@import "modules/clientGray";
+@import "modules/clientWhite";
+@import "modules/gojo";
+@import "modules/fifthThird";
+@import "modules/chhn";
+@import "modules/footer";
 
