--- a/process/sass/variables.scss
+++ b/process/sass/variables.scss
@@ -6,3 +6,5 @@ $green:       #548C27;
 $orange:      #F39856;
 $red:         #D14348;
 $purple:      #6D73C2;
+$gray:        #efefef;
+$dark:        #424242;
