--- a/process/sass/modules/hero.scss
+++ b/process/sass/modules/hero.scss
@@ -1,5 +1,5 @@
 #hero {
-	background: url("../assets/images/pic-hero.png") no-repeat center fixed; 
+	background: url("../assets/images/pic-hero.png") no-repeat center; 
     height: 480px;
     background-size: cover;
 font-family: Effra_Std_Bd;
