--- a/process/sass/modules/gojo.scss
+++ b/process/sass/modules/gojo.scss
@@ -1,22 +1,137 @@
 .gojo {
-    background: url("../assets/images/pic-gojo-bg.png") no-repeat; 
+    background: url("../assets/images/pic-gojo-bg-enhanced_fixed.png") no-repeat; 
     background-size: 100% 100%;
-    height: 450px;
+    height: 470px;
 font-family: Effra_Std_Bd;
 color: $white;
 z-index: 0;
+overflow: hidden;
 }
 
+
+
 .picgojo {
-    position: relative;
-    height: 100%;
     width: 50%;
     float: left;
 
-    img{
-        position: absolute;
-        height: 90%;
-        bottom: 0;
-        left: 80px;
+    img {
+        padding-top:17px;
+        padding-left: 10%;
+        z-index: 10;
     }
+}
+
+.gojoHead {
+    font-family: Effra_Std_Bd;
+    font-size: 30px;
+    padding-bottom: 30px; 
+    color: black;
+}
+
+.gojoSecond {
+    font-size: 17px;
+    font-family: Effra_Std_Bd;
+    line-height: 30px;
+    color: black;
+}
+
+
+.gojoBody {
+    font-size: 17px;
+    font-family: Effra_Std_Rg;
+    line-height: 30px;
+    color: black;
+}
+
+.gojoText {
+    padding-top: 65px;
+    padding-left: 15%;
+    font-family: Effra_Std_Rg;
+    margin: 0;
+}
+
+input[type=submit] {
+    margin-top: 30px;
+    background-color: $blue;
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: left;
+  }
+
+
+  @media (min-width: 800px) {
+      .gojoText{
+    padding-left: 60%;
+     } 
+      }
+
+
+@media (max-width: 600px) {
+    .gojo {
+    background: url("../assets/images/pic-gojo-bg-enhanced_fixed.png") no-repeat; 
+    height: 600px;
+font-family: Effra_Std_Bd;
+color: $white;
+z-index: 0;
+width: 100%;
+background-color: #e9e9e9;
+    }
+
+    .picgojo {
+        width: 100%;
+    
+        img {
+            text-align: center;
+            width: 100%;
+            height: 300px !important;
+            padding-top:17px;
+            z-index: 10;
+        }
+    }
+
+    .gojoHead {
+        font-family: Effra_Std_Bd;
+        font-size: 30px;
+        padding-bottom: 30px; 
+        color: black;
+    }
+    
+    .gojoSecond {
+        font-size: 17px;
+        font-family: Effra_Std_Bd;
+        line-height: 30px;
+        color: black;
+    }
+    
+    
+    .gojoBody {
+        font-size: 17px;
+        font-family: Effra_Std_Rg;
+        line-height: 30px;
+        color: black;
+    }
+    
+    .gojoText {
+        padding-top: 65px;
+        font-family: Effra_Std_Rg;
+        margin: 0;
+        width: 100%;
+        padding-left: 0;
+        text-align: left;
+    }
+    
+    input[type=submit] {
+        margin-top: 30px;
+        background-color: $blue;
+        color: white;
+        padding: 15px 30px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        float: left;
+      }
+
 }
