--- a/process/sass/modules/hero.scss
+++ b/process/sass/modules/hero.scss
@@ -17,7 +17,22 @@ color: $white;
 }
 
 
-@font-face {
+@media (max-width: 600px) {
+    #hero {
+        background: url("../assets/images/pic-hero.png") no-repeat center; 
+        height: 300px;
     font-family: Effra_Std_Bd;
-    src: url("../assets/fonts/Effra_Std_Bd.ttf");
-}
+    color: $white;
+    width: 100%;
+    }
+
+    #cardLogo {
+        padding: 30px 0 0 60px;
+    }
+    
+    #heroText {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 100px;
+    }
+    }
