--- a/process/sass/modules/hero.scss
+++ b/process/sass/modules/hero.scss
@@ -27,12 +27,14 @@ color: $white;
     }
 
     #cardLogo {
-        padding: 30px 0 0 60px;
+        padding: 50px 0 0 60px;
+        text-align: center;
     }
     
     #heroText {
         text-align: center;
-        font-size: 20px;
-        margin-top: 100px;
+        font-size: 25px;
+        margin-top: 30px;
+        line-height: 50px;
     }
     }
