--- a/process/sass/modules/clientWhite.scss
+++ b/process/sass/modules/clientWhite.scss
@@ -1,11 +1,13 @@
 #clientWhite {
     height: 450px;
     z-index: 1;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     padding-bottom: 100px;
-}
+    position: absolute;
+    top: 300px;
 
+}
 
 
 .clientImage {
@@ -43,19 +45,57 @@
 
 
 .clientHead {
-    background-color: $dark;
+    padding: 50px 0 0 100px;
     box-sizing: border-box;   
 color: $white;
 font-size: 25px;
 font-family: Effra_Std_Rg;
-width: 50%;
+width: 100%;
 }
 
 .clientBody {
-    width: 50%;
-    background-color: $dark;
+    padding: 15px 0 0 100px;
+    width: 100%;
     color: $white;
     font-family: Effra_Std_Rg;
+}
+
+
+#fifthLogo {
+    width: 100%;
+    padding-top: 25%;
+
+}
+
+#chhnLogo {
+    width: 100%;
+    padding-top: 37%;
+
+}
+
+#chsLogo {
+    width: 100%;
+    padding-top:70px;
+
+}
+
+#skanskaLogo {
+
+    width: 100%;
+    padding-top: 80px;
+
+}
+
+#rackLogo {
+    width: 100%;
+    padding-top:30px;
+
+}
+
+#pngLogo {
+    width: 100%;
+    padding-top:25%;
+
 }
 
 
@@ -63,11 +103,13 @@ width: 50%;
 @media (max-width: 600px) {
 
     #clientWhite {
-        height: 300px;
+        height: 400px;
         z-index: 1;
         margin-left: 2%;
         margin-right: 2%;
         padding-bottom: 100px;
+        position: absolute;
+        top: 550px;
     }
 
     .halfBox {
@@ -96,13 +138,16 @@ width: 50%;
         font-family: Effra_Std_Rg;
         text-align: center;
         font-size: 13px;
+        padding: 0;
     }
 
     .clientBox {
         float: left;
         box-sizing: border-box;
         outline: 1px solid #cccccc;
-        margin: 1%;
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 10px;
         width: 100% !important;
         height: 80px;
         background-color: $white;
@@ -119,8 +164,47 @@ width: 50%;
         text-align: center;
         margin: auto;
         width: 100%;
-        height: 100%;
+        padding-top:10px;
+        height: 60px;
         }
+    }
+
+    #fifthLogo {
+        width: 80%;
+        padding-top:10px;
+
+    }
+
+    #chhnLogo {
+        width: 70%;
+        height: 40px;
+        padding-top:10px;
+
+    }
+
+    #chsLogo {
+        width: 55%;
+        padding-top:10px;
+
+    }
+
+    #skanskaLogo {
+        height: 10px;
+        width: 80%;
+        padding-top:10px;
+
+    }
+
+    #rackLogo {
+        width: 30%;
+        padding-top:10px;
+
+    }
+
+    #pngLogo {
+        width: 50%;
+        padding-top:10px;
+
     }
 
 }
