--- a/process/sass/modules/gojo.scss
+++ b/process/sass/modules/gojo.scss
@@ -112,6 +112,7 @@ background-color: #e9e9e9;
         font-family: Effra_Std_Rg;
         line-height: 30px;
         color: black;
+        padding-bottom: 20px;
     }
     
     .gojoText {
@@ -121,6 +122,7 @@ background-color: #e9e9e9;
         width: 100%;
         padding-left: 0;
         text-align: left;
+        background-color: #e9e9e9;
     }
     
     input[type=submit] {
