--- a/process/sass/modules/chhn.scss
+++ b/process/sass/modules/chhn.scss
@@ -19,6 +19,7 @@ padding-right: 200px;
 
 
 .chhnHead {
+    padding-top: 80px;
     font-family: Effra_Std_Bd;
     font-size: 30px;
     padding-bottom: 30px; 
@@ -81,6 +82,7 @@ input[type=submit] {
         }    
         
         .chhnHead {
+            padding-top: 0;
             font-family: Effra_Std_Bd;
             font-size: 22px;
             padding-bottom: 20px; 
