--- a/process/sass/modules/gojo.scss
+++ b/process/sass/modules/gojo.scss
@@ -62,6 +62,12 @@ input[type=submit] {
   }
 
 
+  input[type="submit"]:hover {
+    transition: background-color .3s linear;
+    background-color: darken($blue, 10%);
+    color: $white;
+}
+
   @media (min-width: 800px) {
       .gojoText{
     padding-left: 60%;
