minified images to improve response time

--- a/process/sass/modules/hero.scss
+++ b/process/sass/modules/hero.scss
@@ -1,5 +1,5 @@
 #hero {
-	background: url("../assets/images/pic-hero.png") no-repeat center; 
+	background: url("../assets/images/pic-hero-min.png") no-repeat center; 
     height: 480px;
     background-size: cover;
 font-family: Effra_Std_Bd;
@@ -19,7 +19,7 @@ color: $white;
 
 @media (max-width: 600px) {
     #hero {
-        background: url("../assets/images/pic-hero.png") no-repeat center; 
+        background: url("../assets/images/pic-hero-min.png") no-repeat center; 
         height: 300px;
     font-family: Effra_Std_Bd;
     color: $white;
