--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -10,3 +10,9 @@
 @import "modules/footer";
 @import "modules/connect";
 
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
