--- a/process/sass/modules/clientWhite.scss
+++ b/process/sass/modules/clientWhite.scss
@@ -23,6 +23,14 @@
     }
 }
 
+#rackimage {
+    box-sizing: border-box;
+        padding: 13% 25% 25% 25%;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+}
+
 .clientBox {
     float: left;
     box-sizing: border-box;
